// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When suite exists Sanity - making sure everything works as it should 1`] = `
Object {
  "_canceled": Object {
    "3": true,
  },
  "_suites": Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_1": false,
            "field_3": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "2",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "5",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "7",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "suiteId": "suite_id",
        "testObjects": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "5",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "7",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "2",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_2": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "suiteId": "suite_id",
        "testObjects": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "2",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "3",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
    ],
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 2`] = `
Object {
  "_canceled": Object {
    "0": true,
    "10": true,
    "11": true,
    "13": true,
    "15": true,
    "16": true,
    "18": true,
    "19": true,
    "2": true,
    "21": true,
    "23": true,
    "27": true,
    "3": true,
    "5": true,
    "7": true,
    "8": true,
  },
  "_suites": Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_1": false,
            "field_3": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": Array [
          A {
            "failed": false,
            "fieldName": "field_1",
            "id": "24",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          A {
            "failed": false,
            "fieldName": "field_3",
            "id": "26",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          A {
            "failed": false,
            "fieldName": "field_2",
            "id": "29",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          A {
            "failed": false,
            "fieldName": "field_4",
            "id": "31",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "suiteId": "suite_id",
        "testObjects": Array [
          A {
            "failed": false,
            "fieldName": "field_2",
            "id": "29",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          A {
            "failed": false,
            "fieldName": "field_4",
            "id": "31",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          A {
            "failed": false,
            "fieldName": "field_1",
            "id": "24",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          A {
            "failed": false,
            "fieldName": "field_3",
            "id": "26",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_2": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "suiteId": "suite_id",
        "testObjects": Array [
          A {
            "failed": false,
            "fieldName": "field_1",
            "id": "24",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          A {
            "failed": false,
            "fieldName": "field_3",
            "id": "26",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          A {
            "failed": false,
            "fieldName": "field_4",
            "id": "27",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
    ],
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 3`] = `
Object {
  "_canceled": Object {
    "0": true,
    "10": true,
    "11": true,
    "13": true,
    "15": true,
    "16": true,
    "18": true,
    "19": true,
    "2": true,
    "21": true,
    "23": true,
    "24": true,
    "26": true,
    "27": true,
    "29": true,
    "3": true,
    "31": true,
    "32": true,
    "34": true,
    "35": true,
    "37": true,
    "39": true,
    "40": true,
    "42": true,
    "43": true,
    "45": true,
    "47": true,
    "5": true,
    "51": true,
    "7": true,
    "8": true,
  },
  "_suites": Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_1": false,
            "field_3": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": Array [
          m {
            "failed": false,
            "fieldName": "field_1",
            "id": "48",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          m {
            "failed": false,
            "fieldName": "field_3",
            "id": "50",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          m {
            "failed": false,
            "fieldName": "field_2",
            "id": "53",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          m {
            "failed": false,
            "fieldName": "field_4",
            "id": "55",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "suiteId": "suite_id",
        "testObjects": Array [
          m {
            "failed": false,
            "fieldName": "field_2",
            "id": "53",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          m {
            "failed": false,
            "fieldName": "field_4",
            "id": "55",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          m {
            "failed": false,
            "fieldName": "field_1",
            "id": "48",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          m {
            "failed": false,
            "fieldName": "field_3",
            "id": "50",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_2": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "suiteId": "suite_id",
        "testObjects": Array [
          m {
            "failed": false,
            "fieldName": "field_1",
            "id": "48",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          m {
            "failed": false,
            "fieldName": "field_3",
            "id": "50",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          m {
            "failed": false,
            "fieldName": "field_4",
            "id": "51",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
    ],
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 4`] = `
Object {
  "_canceled": Object {
    "0": true,
    "10": true,
    "11": true,
    "13": true,
    "15": true,
    "16": true,
    "18": true,
    "19": true,
    "2": true,
    "21": true,
    "23": true,
    "24": true,
    "26": true,
    "27": true,
    "29": true,
    "3": true,
    "31": true,
    "32": true,
    "34": true,
    "35": true,
    "37": true,
    "39": true,
    "40": true,
    "42": true,
    "43": true,
    "45": true,
    "47": true,
    "48": true,
    "5": true,
    "50": true,
    "51": true,
    "53": true,
    "55": true,
    "56": true,
    "58": true,
    "59": true,
    "61": true,
    "63": true,
    "64": true,
    "66": true,
    "67": true,
    "69": true,
    "7": true,
    "71": true,
    "75": true,
    "8": true,
  },
  "_suites": Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_1": false,
            "field_3": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "72",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "74",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "77",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "79",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "suiteId": "suite_id",
        "testObjects": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "77",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "79",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "72",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "74",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
      Object {
        "doneCallbacks": Array [],
        "exclusion": Object {
          "groups": Object {},
          "tests": Object {
            "field_2": false,
          },
        },
        "fieldCallbacks": Object {},
        "groups": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "suiteId": "suite_id",
        "testObjects": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "72",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "74",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "75",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "tests": Object {},
      },
    ],
  },
}
`;
